FIX: horizontal scroll bar on multiple alignfull elements

--- a/assets/sass/3-blocks/_blocks-core.scss
+++ b/assets/sass/3-blocks/_blocks-core.scss
@@ -49,8 +49,9 @@
 	&.alignfull {
 		position: relative;
 		width: 100vw;
-		margin-left: calc(50% - 50vw);
-		max-width: none;
+		margin-left: auto;
+		margin-right: auto;
+		max-width: 100%;
 	}
 }
 
